--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,7 +68,11 @@
         "cfenv": "cpp",
         "variant": "cpp",
         "bit": "cpp",
-        "*.def": "cpp"
+        "*.def": "cpp",
+        "csignal": "cpp",
+        "strstream": "cpp",
+        "codecvt": "cpp",
+        "complex": "cpp"
     },
     "editor.tokenColorCustomizations": {
         "textMateRules": [
@@ -95,4 +99,5 @@
             },
         ]
     },
+    "cmake.sourceDirectory": "/home/yangjianchao/Github/gpgpu-cim-simulator/cuda_codes/cutlass_v2.0.0/examples/08_turing_tensorop_gemm",
 }
