--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,7 +73,9 @@
         "strstream": "cpp",
         "codecvt": "cpp",
         "complex": "cpp",
-        "*.ipp": "cpp"
+        "*.ipp": "cpp",
+        "hash_map": "cpp",
+        "hash_set": "cpp"
     },
     "editor.tokenColorCustomizations": {
         "textMateRules": [
