--- a/cuda_codes/simple_cim_codes/gpgpusim.config
+++ b/cuda_codes/simple_cim_codes/gpgpusim.config
@@ -87,7 +87,10 @@
 # ID_OC_SP,ID_OC_DP,ID_OC_INT,ID_OC_SFU,ID_OC_MEM,OC_EX_SP,OC_EX_DP,OC_EX_INT,OC_EX_SFU,OC_EX_MEM,EX_WB,ID_OC_TENSOR_CORE,OC_EX_TENSOR_CORE
 ## Volta GV100 has 4 SP SIMD units, 4 SFU units, 4 DP units per core, 4 Tensor core units
 ## we need to scale the number of pipeline registers to be equal to the number of SP units
--gpgpu_pipeline_widths 4,4,4,4,4,4,4,4,4,4,8,4,4
+
+# -gpgpu_pipeline_widths 4,4,4,4,4,4,4,4,4,4,8,4,4   # yangjianchao16 del
+# yangjianchao16 add the below line:
+-gpgpu_pipeline_widths 4,4,4,4,4,4,4,4,4,4,8,4,4,1,1
 -gpgpu_num_sp_units 4
 -gpgpu_num_sfu_units 4
 -gpgpu_num_dp_units 4
@@ -239,3 +242,14 @@
 #-trace_enabled 1
 #-trace_components WARP_SCHEDULER,SCOREBOARD
 #-trace_sampling_core 0
+
+# yangjianchao16 add the below line:
+-gpgpu_operand_collector_num_units_cim 4
+# yangjianchao16 add the below line:
+-gpgpu_operand_collector_num_in_ports_cim 1
+# yangjianchao16 add the below line:
+-gpgpu_operand_collector_num_out_ports_cim 1
+# yangjianchao16 add the below line:
+-gpgpu_cim_avail 1
+# yangjianchao16 add the below line:
+-gpgpu_num_cim_units 4
