--- a/configs/cim-cfgs/SM7_QV100/gpgpusim.config
+++ b/configs/cim-cfgs/SM7_QV100/gpgpusim.config
@@ -88,9 +88,10 @@
 ## Volta GV100 has 4 SP SIMD units, 4 SFU units, 4 DP units per core, 4 Tensor core units
 ## we need to scale the number of pipeline registers to be equal to the number of SP units
 
-# -gpgpu_pipeline_widths 4,4,4,4,4,4,4,4,4,4,8,4,4   # yangjianchao16 del
+# yangjianchao16 del the below line:
+# -gpgpu_pipeline_widths 4,4,4,4,4,4,4,4,4,4,8,4,4
 # yangjianchao16 add the below line:
--gpgpu_pipeline_widths 4,4,4,4,4,4,4,4,4,4,8,4,4,1,1
+-gpgpu_pipeline_widths 4,4,4,4,4,4,4,4,4,4,8,4,4,4,4
 -gpgpu_num_sp_units 4
 -gpgpu_num_sfu_units 4
 -gpgpu_num_dp_units 4
