--- a/cuda_codes/simple_cim_codes/gpgpusim.config
+++ b/cuda_codes/simple_cim_codes/gpgpusim.config
@@ -40,7 +40,7 @@
 
 # functional simulator specification
 -gpgpu_ptx_instruction_classification 0
--gpgpu_ptx_sim_mode 1
+-gpgpu_ptx_sim_mode 0
 -gpgpu_ptx_force_max_capability 70 
 
 # Device Limits
@@ -88,9 +88,10 @@
 ## Volta GV100 has 4 SP SIMD units, 4 SFU units, 4 DP units per core, 4 Tensor core units
 ## we need to scale the number of pipeline registers to be equal to the number of SP units
 
-# -gpgpu_pipeline_widths 4,4,4,4,4,4,4,4,4,4,8,4,4   # yangjianchao16 del
+# yangjianchao16 del the below line:
+# -gpgpu_pipeline_widths 4,4,4,4,4,4,4,4,4,4,8,4,4
 # yangjianchao16 add the below line:
--gpgpu_pipeline_widths 4,4,4,4,4,4,4,4,4,4,8,4,4,1,1
+-gpgpu_pipeline_widths 4,4,4,4,4,4,4,4,4,4,8,4,4,4,4
 -gpgpu_num_sp_units 4
 -gpgpu_num_sfu_units 4
 -gpgpu_num_dp_units 4
