--- a/configs/cim-cfgs/SM7_QV100/gpgpusim.config
+++ b/configs/cim-cfgs/SM7_QV100/gpgpusim.config
@@ -40,7 +40,7 @@
 
 # functional simulator specification
 -gpgpu_ptx_instruction_classification 0
--gpgpu_ptx_sim_mode 1
+-gpgpu_ptx_sim_mode 0
 -gpgpu_ptx_force_max_capability 70 
 
 # Device Limits
@@ -90,6 +90,7 @@
 
 # yangjianchao16 del the below line:
 # -gpgpu_pipeline_widths 4,4,4,4,4,4,4,4,4,4,8,4,4
+# Also some error need to check, donnot kown what mean for the below line.
 # yangjianchao16 add the below line:
 -gpgpu_pipeline_widths 4,4,4,4,4,4,4,4,4,4,8,4,4,4,4
 -gpgpu_num_sp_units 4
@@ -244,6 +245,7 @@
 #-trace_components WARP_SCHEDULER,SCOREBOARD
 #-trace_sampling_core 0
 
+# Also some error need to check, donnot kown what mean for the below lines.
 # yangjianchao16 add the below line:
 -gpgpu_operand_collector_num_units_cim 4
 # yangjianchao16 add the below line:
