--- a/cuda_codes/simple_cimma_codes/gpgpusim.config
+++ b/cuda_codes/simple_cimma_codes/gpgpusim.config
@@ -90,7 +90,7 @@
 
 # yangjianchao16 del the below line:
 # -gpgpu_pipeline_widths 4,4,4,4,4,4,4,4,4,4,8,4,4
-# Also some error need to check, donnot kown what mean for the below line.
+# Also some error need to check, donot kown what mean for the below line.
 # yangjianchao16 add the below line:
 -gpgpu_pipeline_widths 4,4,4,4,4,4,4,4,4,4,8,4,4,4,4
 -gpgpu_num_sp_units 4
@@ -247,11 +247,11 @@
 
 # Also some error need to check, donnot kown what mean for the below lines.
 # yangjianchao16 add the below line:
--gpgpu_operand_collector_num_units_cim 4
+-gpgpu_operand_collector_num_units_cim 0
 # yangjianchao16 add the below line:
--gpgpu_operand_collector_num_in_ports_cim 1
+-gpgpu_operand_collector_num_in_ports_cim 0
 # yangjianchao16 add the below line:
--gpgpu_operand_collector_num_out_ports_cim 1
+-gpgpu_operand_collector_num_out_ports_cim 0
 # yangjianchao16 add the below line:
 -gpgpu_cim_avail 1
 # yangjianchao16 add the below line:
