--- a/configs/cim-cfgs/SM7_QV100/gpgpusim.config
+++ b/configs/cim-cfgs/SM7_QV100/gpgpusim.config
@@ -245,13 +245,13 @@
 #-trace_components WARP_SCHEDULER,SCOREBOARD
 #-trace_sampling_core 0
 
-# Also some error need to check, donnot kown what mean for the below lines.
+# Also some error need to check, donot kown what mean for the below lines.
 # yangjianchao16 add the below line:
--gpgpu_operand_collector_num_units_cim 4
+-gpgpu_operand_collector_num_units_cim 0
 # yangjianchao16 add the below line:
--gpgpu_operand_collector_num_in_ports_cim 1
+-gpgpu_operand_collector_num_in_ports_cim 0
 # yangjianchao16 add the below line:
--gpgpu_operand_collector_num_out_ports_cim 1
+-gpgpu_operand_collector_num_out_ports_cim 0
 # yangjianchao16 add the below line:
 -gpgpu_cim_avail 1
 # yangjianchao16 add the below line:
